--- a/index.html
+++ b/index.html
@@ -420,12 +420,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand" style="font-weight: 800"> Embodied AI Safety</a>
+        <a href="#" class="navbar-brand" style="font-weight: 800"> PSFD</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li> <a href="./index.html#a_quick_glance" style="color: white; font-weight: 500">Video Example</a></li>
+          <li> <a href="./index.html#a_quick_glance" style="color: white; font-weight: 500">Quick Glance</a></li>
           <li> <a href="./index.html#paper_overview" style="color: white; font-weight: 500">Our Paper</a></li>
           <li> <a href="./index.html#ethics" style="color: white; font-weight: 500">Ethics and Disclosure</a></li>
         </ul>
@@ -438,11 +438,11 @@
   <div class="container" id="header" style="text-align: center; margin: auto;">
     <div class="row" id="title-row" style="max-width: 100%; margin: 0 auto; display: inline-block">
       <h2 class="col-md-12 text-center" id="title">
-       The Threats of Embodied Multimodal LLMs: Jailbreaking  Robotic Manipulation in the  Physical World
+          PSFD: Proactive Spatial-Frequency Defense against Malicious Exemplar-Guided Image Editing
       </h2>
-      <h3 class="col-md-12 text-center" id="title" style="color: rgb(140, 21, 21);">
-        Warning: This paper contains potentially harmful AI-generated language and aggressive actions.
-      </h3>
+<!--      <h3 class="col-md-12 text-center" id="title" style="color: rgb(140, 21, 21);">-->
+<!--        Warning: This paper contains potentially harmful AI-generated language and aggressive actions.-->
+<!--      </h3>-->
     </div>
   </div>
   <script>
@@ -451,20 +451,20 @@
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <ul class="list-inline">
-          <li>Hangtao Zhang<sup>1</sup></a> </li>
-          <li> Chenyu Zhu<sup>1</sup></a> </li>
-          <li>Xianlong Wang<sup>1</sup></a> </li>
-          <li>Ziqi Zhou<sup>1</sup></a> </li>
-          <li>Yichen Wang<sup>1</sup></a></li>
-          <li>Lulu Xue<sup>1</sup></a></li>
-            <li>Minghui Li<sup>1</sup></a></li>
-            <li>Shengshan Hu<sup>1</sup></a></li>
-            <li>Leo Yu Zhang<sup>2</sup></a></li>
+          <li>Li Zeng<sup>1</sup></a> </li>
+          <li>Xiaojun Mo<sup>1</sup></a> </li>
+          <li>Meng Xie<sup>1</sup></a> </li>
+          <li>Hangtao Zhang<sup>2</sup></a> </li>
+          <li>Yixiang Liu<sup>3</sup></a></li>
+          <li>Yezhuo Peng<sup>1</sup></a></li>
+            <li>Yanchun Li<sup>1</sup></a></li>
+
 <!--             <li> <a href="https://www.princeton.edu/~pmittal/">Shengshan Hu<sup>1†</sup></a></li>-->
         </ul>
         <ul class="list-inline">
-          <li> <sup>1</sup>Huazhong University of Science and Technology</li>
-            <li> <sup>2</sup>Griffith University</li>
+            <li> <sup>1</sup>Xiangtan University</li>
+          <li> <sup>2</sup>Huazhong University of Science and Technology</li>
+            <li> <sup>3</sup>Southern University of Science and Technology</li>
           <br />
 <!--          <li> <sup>*</sup> Lead Authors</li>-->
 <!--          <li> <sup>†</sup> Equal Advising</li>-->
@@ -476,7 +476,7 @@
    <div class="row">
      <div class="col-sm-8 col-sm-offset-2 text-center">
        <span class="link-block">
-         <a href="https://arxiv.org/abs/2407.20242" class="external-link button is-normal is-rounded is-dark" style="background-color: rgb(140, 21, 21);font-size: 13px">
+         <a href="" class="external-link button is-normal is-rounded is-dark" style="background-color: rgb(140, 21, 21);font-size: 13px">
            <span class="icon">
              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-pdf" viewBox="0 0 16 16">
                <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z"/>
@@ -583,14 +583,14 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 text-center">
-        <video controls muted loop autoplay>
-          <source src="./LLMFinetuneRisk_files/videos/demo.mp4" type="video/mp4"/>
-        </video>
-        <!-- &lt;!&ndash; <div class="video-wrapper">
-          <iframe  class="video-frame" src="https://drive.google.com/file/d/1wz4MCYqHn14p6O9807ldZJRnsV-AzSWq/preview" frameborder="0" allowfullscreen></iframe>
-        </div> &ndash;&gt; -->
-      </div>
+<!--      <div class="col-sm-10 col-sm-offset-1 text-center">-->
+<!--        <video controls muted loop autoplay>-->
+<!--          <source src="./LLMFinetuneRisk_files/videos/demo.mp4" type="video/mp4"/>-->
+<!--        </video>-->
+<!--        &lt;!&ndash; &lt;!&ndash; <div class="video-wrapper">-->
+<!--          <iframe  class="video-frame" src="https://drive.google.com/file/d/1wz4MCYqHn14p6O9807ldZJRnsV-AzSWq/preview" frameborder="0" allowfullscreen></iframe>-->
+<!--        </div> &ndash;&gt; &ndash;&gt;-->
+<!--      </div>-->
     </div>
 
 
@@ -599,14 +599,19 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
            <center>
-          <img src="./head.png" class="img-responsive" alt="overview" width="100%"
-            style="margin:auto;padding-top: 1em">
+          <img src="./head.png" class="img-responsive" alt="overview" width="70%"
+            style="margin:auto;">
           <figcaption> <p class="text-justify">
 <!--              以下是caption-->
               <span style="font-weight: bold; font-size: larger;">Figure 1. </span>
-              <b><i>In this work, for the first time, we successfully jailbreak the LLM-based embodied AI in the physical world</i></b>, enabling it to perform various actions that were previously restricted.
-              We demonstrate the potential for embodied AI to engage in activities related to <b><i>Physical Harm, Privacy Violations, Pornography, Fraud, Illegal Activities,  Hateful Conduct, and Sabotage</i></b> activatities.
-             </p>
+              Image editing results by Paint by Example [13], with
+                  and without our defenses. Attackers start by selecting a victim
+                  image (a), then choose an editing area (mask area) and a
+                  reference image to produce high-quality fakes (b). Our PSFD-U
+                  maximizes the disparity between the manipulated and intended
+                  edits (c). Meanwhile PSFD-T guides the edited image to align
+                  closely with a specific target style (d). Both methods effectively
+                  undermine malicious editing efforts.</p>
           </figcaption>
         </center>
 
@@ -614,19 +619,26 @@
           Paper Overview
         </h3>
         <div class="text-justify">
-           Embodied artificial intelligence (AI) represents an AI system integrated into physical entities,
-            capable of perceiving and interacting with their environment through sensors and actuators.
-            Large Language Models (LLMs) deeply explore language instructions, playing a crucial role in devising plans for complex tasks.
-            Consequently, they have progressively shown immense potential in empowering embodied AI, with LLM-based embodied AI emerging as a focal point of research within the community.
-            Over the next decade, embodied AI robots are expected to become commonplace in homes and industries.
-            However, a critical safety issue that has long been hiding in plain sight is: could LLM-based embodied AI perpetrate harmful behaviors?
-            <b><i>Our research investigates, for the first time, how to induce threatening actions in embodied AI systems operating in the real world</i></b>,
-            confirming the severe risks posed by these soon-to-be-marketed robots, which starkly contravene Asimov's Three Laws of Robotics and threaten human safety.
-            Specifically, we formulate the concept of embodied AI jailbreaking and expose three critical security vulnerabilities: first, jailbreaking robotics through compromised LLMs;
-            second, safety misalignment between action and linguistic output spaces; and third, deceptive prompts leading embodied AI with imperfect world knowledge to perform unaware hazardous behaviors.
-            Experiments on embodied AI systems using various advanced LLMs (e.g., Chat-GPT4, Chat-GPT4o, and Yi-vision) demonstrate the effectiveness of our embodied AI jailbreak attacks.
-            We also analyze potential mitigation measures and advocate for community awareness regarding the safety of embodied AI applications in the physical world.
-        </div>
+            The advancement of diffusion models has threatened
+            image authenticity by enabling highly realistic fakes. Proactive
+            defense offers protection by adding a "protective layer" that
+            resists such manipulation. Current approaches focus on text-
+            guided editing but are less effective for the more challenging
+            exemplar-guided tasks. To bridge this gap, we propose Proactive
+            Spatial-Frequency Defense (PSFD), a novel proactive defense for
+            exemplar-guided image editing. At the heart of PSFD is a repur-
+            posed adversarial attack technique that adds subtle perturbations
+            to make images immune to edit. We apply protections in both
+            the frequency and spatial domains. In the spatial domain, we
+            craft perturbations that force visual encoders to map the image
+            to "bad" epresentations, disrupting feature extraction. In the
+            frequency domain, we tweak the high-frequency components
+            to distort the image’s texture information. To meet different
+            application scenarios, we design two optimization strategies:
+            PSFD-U that aims to generate maximal variation and PSFD-T
+            that seeks to achieve specific editing styles. Extensive experiments
+            on MS-COCO and ImageNet demonstrate PSFD's strong defensive
+            capabilities and transferability. </div>
         <center>
           <img src="./overview.png" class="img-responsive" alt="overview" width="100%"
             style="margin:auto;padding-top: 1em">
