--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
   <div class="container" id="header" style="text-align: center; margin: auto;">
     <div class="row" id="title-row" style="max-width: 100%; margin: 0 auto; display: inline-block">
       <h2 class="col-md-12 text-center" id="title">
-          PSFD: Proactive Spatial-Frequency Defense against Malicious Exemplar-Guided Image Editing
+          PSFD: Proactive Spatial-Frequency Defense against Malicious <br> Exemplar-Guided Image Editing
       </h2>
 <!--      <h3 class="col-md-12 text-center" id="title" style="color: rgb(140, 21, 21);">-->
 <!--        Warning: This paper contains potentially harmful AI-generated language and aggressive actions.-->
