--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
                   <img src="./ourmethod.png" class="img-responsive" alt="overview" width="90%"
                        style="margin:auto;padding-top: 1em;padding-bottom: 10px">
                   <figcaption><p class="text-justify" style="text-align: center;"><span style="font-weight: bold; font-size: larger;">Figure 5. </span>
-                      Examples of our method(PSFD-U)
+                      Examples of our method(<b><i>PSFD-U</i></b>)
                       <!--              <strong><span class="blue-text">(a):</span></strong> inducing harmful behaviors by leveraging jailbroken LLMs;-->
                       <!--              <strong><span class="blue-text">(b):</span></strong> safety misalignment between action and linguistic output spaces (i.e., verbally refuses response but still acts);-->
                       <!--              <strong><span class="blue-text">(c):</span></strong> conceptual deception inducing unrecognized harmful behaviors.-->
@@ -889,7 +889,7 @@
                   <img src="./exa2.png" class="img-responsive" alt="overview" width="90%"
                        style="margin:auto;padding-bottom: 10px">
                   <figcaption><p class="text-justify" style="text-align: center;"><span style="font-weight: bold; font-size: larger;">Figure 6. </span>
-                      More samples from our method(PSFD-U)
+                      More samples from our method(<b><i>PSFD-U</i></b>)
                       <!--              <strong><span class="blue-text">(a):</span></strong> inducing harmful behaviors by leveraging jailbroken LLMs;-->
                       <!--              <strong><span class="blue-text">(b):</span></strong> safety misalignment between action and linguistic output spaces (i.e., verbally refuses response but still acts);-->
                       <!--              <strong><span class="blue-text">(c):</span></strong> conceptual deception inducing unrecognized harmful behaviors.-->
